--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.uoc.abarrena</groupId>
-    <artifactId>users</artifactId>
+    <artifactId>notifications</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -148,6 +148,12 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+            <version>3.0.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
             <version>3.0.5</version>
         </dependency>
 
